add wikiIcon plugin

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/timetree-plugin.css">
     <link rel="stylesheet" href="./style/milestone-plugin.css">
     <link rel="stylesheet" href="./style/neiltime-plugin.css">
+    <link rel="stylesheet" href="./style/wikiIcon-plugin.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="c43b4c19-b285-450f-b1f7-f61e98fb46e9"></script>
   </head>
   <body>
@@ -38,5 +39,7 @@
     <script src="./js/milestone-plugin.js"></script>
     <!-- neiltime plugin -->
     <script src="./js/neiltime-plugin.js"></script>
+    <!-- wikiIcon plugin -->
+    <script src="./js/wikiIcon-plugin.js"></script>
   </body>
 </html>
