--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>گاه‌شمار ایران</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Description">
+    <meta name="description" content="گاه‌شماری جامع از رویدادهای تاریخی ایران شامل پادشاهی‌ها، جنگ‌ها، شخصیت‌های برجسته، رویدادها و مکان‌ها">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
     <link rel="stylesheet" href="./style/stylesheet.css">
